--- a/parallax/parallaxsite.html
+++ b/parallax/parallaxsite.html
@@ -22,7 +22,7 @@
     <img src="moon.png" id="moon">
     <img src="mountains_behind.png" id="mountains_behind">
     <h2 id="text">Projeto Parallax da Giullia</h2>
-    <a href="https://moonphases.co.uk/" target="_blank" id="btn">Explore</a>
+    <a href="https://github.com/giuiacr/PortfolioGiullia" target="_blank" id="btn">Explore</a>
     <img src="mountains_front.png" id="mountains_front">
 </section>
 <div class="sec" id="sec">
