--- a/Landingpage/landingpage.html
+++ b/Landingpage/landingpage.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="Exemplo de landing page para portfolio">
-    <title>Landing Page - Um bom projeto para seu portfolio</title>
+    <title>Landing Page</title>
     <link rel="stylesheet" type="text/css" href="landingpage.css">
 </head>
 <body>
     <header class="cabecalho">
         <div class="logo">Logo</div>
         <nav class="cabecalho-menu">
-            <a class="cabecalho-menu-item" href="#">Apresenta&ccedil;&atilde;o</a>
-            <a class="cabecalho-menu-item" href="#">Explica&ccedil;&atilde;o</a>
-            <a class="cabecalho-menu-item" href="#">Uso pr&aacute;tico</a>
-            <a class="cabecalho-menu-item" href="#">Onde colocar meu portfolio?</a>
+            <a class="cabecalho-menu-item" href="#conteudo-principal">Apresenta&ccedil;&atilde;o</a>
+            <a class="cabecalho-menu-item" href="#conteudo-principal-paragrafo">Explica&ccedil;&atilde;o</a>
+            <a class="cabecalho-menu-item" href="#conteudo-secundario">Uso pr&aacute;tico</a>
+            <a class="cabecalho-menu-item" href="#conteudo-terciario">Meus contatos</a>
         </nav>
     </header>
 
@@ -32,13 +32,30 @@
             <h3 class="conteudo-secundario-titulo">Do que se trata o produto</h3>
             <p class="conteudo-secundario-paragrafo">1. Breve <strong>explica&ccedil;&atilde;o</strong> do que o produto/software/bot faz</p>
             <p class="conteudo-secundario-paragrafo">2. Voc&ecirc; pode <strong>criar mais itens</strong> em par&aacute;grafos diferentes, se quiser</p>
-            <p class="conteudo-secundario-paragrafo">3. Nos itens da barra de navega&ccedil;&atilde;, coloque links para ir pra p&aacute;ginas sobre o produto</p>
+            <p class="conteudo-secundario-paragrafo">3. Nos itens da barra de navega&ccedil;&atilde;o, coloque links para ir pra p&aacute;ginas sobre o produto</p>
+            <br>
+        </section>
+
+        <section class="conteudo-terciario">
+            <h3 class="conteudo-terciario-titulo">Meus contatos</h3>
+            <a class="conteudo-terciario-botao" href="https://www.instagram.com/giuiacr/" target="_blank">
+                Instagram
+            </a>
+            <a class="conteudo-terciario-botao" href="https://github.com/giuiacr/PortfolioGiullia" target="_blank">
+                Github
+            </a>
+            <a class="conteudo-terciario-botao" href="https://www.linkedin.com/in/giullia-cordeiro-rebua/" target="_blank">
+                Linkedin
+            </a>
+            <!-- <a class="conteudo-terciario-botao" href="#">
+                Portfolio
+            </a> -->
             <br>
         </section>
     </main>
 
-    <footer class="rodape">
-        GIULLIA LANDING PAGE
+    <footer>
+        <a class="rodape">Giullia Cordeiro Landing Page</a>
     </footer>
    
 </body>
